# arcade_actions

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  PART4_IMPLEMENTATION_SUMMARY.md  README.md  VISUALIZER_GUIDE.md  action_log.txt  actions_req.txt  conditional_coverage_new.txt  coverage.json  coverage_report.txt  coverage_sync.json  coverage_unit.json  current_coverage.txt  cursor.rules  debug_action.py  debug_galaga_test.py  debug_group_action.py  debug_path_coordinates.py  debug_rotation.py  debug_spawn_positioning.py  debug_test_spawn.py  demo.py  display_coverage.txt  display_coverage_final.txt  final_coverage_report.txt  invaders.py  move.py  pattern_coverage.txt  pattern_coverage_new.txt  pyproject.toml  radon_cc.json  radon_raw.json  refactor-priority-report.md  setup_dev.py  test_bug_battle_scenario.py  test_callback_until_with_ticker.py  (+14 more)
.qodo/: testConfig.toml
actions/: AGENTS.md  __init__.py  _movement_bounds.py  _movement_runtime.py  _shared_logging.py  axis_move.py  base.py  callbacks.py  composite.py  conditional.py  config.py  display.py  easing.py  effects.py  formation.py  frame_conditions.py  frame_timing.py  game.py  game_clock.py  group.py  group_action.py  group_health.py  group_state.py  helpers.py  instant.py  interval.py  move.py  movement.py  parametric.py  paths.py  pattern.py  protocols.py  simplified_assignment.py  transforms.py
arcadeactions/: AGENTS.md  __init__.py  _action_callbacks.py  _action_conflicts.py  _action_core.py  _action_debug.py  _action_instrumentation.py  _action_manager.py  _action_targets.py  _composite_base.py  _shared_logging.py  axis_move.py  base.py  callbacks.py  composite.py  debug.py  display.py  easing.py  effects.py  formation.py  frame_conditions.py  frame_timing.py  group.py  group_health.py  group_state.py  helpers.py  movement.py  parametric.py  paths.py  pattern.py  transforms.py
docs/: README.md  VISUALIZER_GUIDE.md  ace_visualizer.md  actions_kg.tsv  api_usage_guide.md  arcade_interface.md  boundary.md  boundary_event.md  debug_logging.md  devvisualizer.md  game_loop_updates.md  game_loop_updates.txt  named_slots.md  prd.md  refactor_plan.md  testing.md  testing_guide.md  testing_index.md  testing_movement.md
examples/: attack_group_demo.py  boss_level.yaml  bug_battle.py  create_boss_level.py  demo.py  devviz_speed_lab.py  devviz_speed_lab.yaml  easing_demo.py  file_watcher_demo.py  formation_demo.py  hot_reload_demo.py  imagostorm.py  invaders.py  laser_gates.py  pattern_demo.py  pymunk_demo_platformer.py  repeating_wave_example.py  space_clutter.py  stars.py  state_machine_demo.py  tween_demo.py
kg/: arcadeactions_full_graph.tsv  arcadeactions_knowledge_graph.tsv  arcadeactions_semantic_prompt.md  arcadeactions_system_prompt.txt  verify_triples.py
snapshots/: snapshot_1763247672466.json  snapshot_1763247677770.json
tests/: AGENTS.md  PERFORMANCE_IMPROVEMENT.md  TEST_ORGANIZATION.md  conftest.py  test_action_cloning.py  test_action_contracts.py  test_action_instrumentation.py  test_action_overlap_prevention.py  test_action_sprite.py  test_api_sugar.py  test_axis_helpers.py  test_axis_move.py  test_base.py  test_bounce_fix.py  test_boundary_behavior_preservation.py  test_bounded_move.py  test_callback_execution.py  test_clone.py  test_collision_detection.py  test_composite.py  test_composite_actions.py  test_condition_actions.py  test_debug.py  (+70 more)
(+391 files in other folders)
