[project]
name = "ArcadeActions"
version = "0.1.0"
description = "A port of Cocos2D Actions for use with the Arcade 3.0 library"
authors = [{name = "Brandon Corfman", email = "h9tbgnbbk@privaterelay.appleid.com"}]
license = {file="LICENSE"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "arcade>=3.0.0.dev35",
    "ipython>=8.32.0",
    "loguru>=0.7.3",
    "pyglet>=2.1.dev5",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pandas>=2.2.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers=["unit: Unit tests.",
         "system: System (browser-based) tests."]
         

[tool.ruff]
line-length = 120
fix = true
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-fixable = ["E", "F", "UP", "B", "SIM", "I"]
